# chem-mrl

./: .flake8  .gitignore  Makefile  README.md  chem-mrl-classifier.py  chem_mrl_train.py  clustering.ipynb  docker-compose.yml  evaluator.py  load_data.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
chem-mrl/: chem_mrl_hyperparameter_search.py  chem_mrl_train.py  constants.py  evaluator.py  load_data.py  tanimoto_loss.py  utils.py
chem_mrl/: ChemMRL.py  __init__.py  constants.py  device_manager.py  molecular_embedder.py  molecular_fingerprinter.py  util.py
chem_mrl/benchmark/: DatabaseBenchmark.py
chem_mrl/classifier/: load_data.py  train.py  utils.py
chem_mrl/conf/: base.yaml  chem_mrl_config.yaml  classifier_config.yaml
chem_mrl/configs/: ArgParseHelper.py  Base.py  BaseConfig.py  Classifier.py  ClassifierConfig.py  MRL.py  MrlConfig.py  __init__.py  types.py
chem_mrl/datasets/: PandasDataFrameDataset.py
chem_mrl/evaluation/: EmbeddingSimilarityEvaluator.py  LabelAccuracyEvaluator.py
chem_mrl/losses/: ClassifierLoss.py  TanimotoLoss.py  __init__.py
chem_mrl/model/: hyperparameter_search.py  load_data.py  train.py  utils.py
chem_mrl/models/: MaxPoolBERT.py
chem_mrl/schemas/: BaseConfig.py  ChemMRLConfig.py  ClassifierConfig.py  Enums.py  MaxPoolBERTConfig.py
chem_mrl/trainers/: BaseTrainer.py  ChemMrlTrainer.py  ClassifierTrainer.py  ExecutableTrainer.py  TrainerExecutor.py  __init__.py
classifier/: classifier_hyperparameter_search.py  classifier_train.py  constants.py  evaluator.py  hyperparameter_search.py  load_data.py  loss.py  sbert_hyperparameter_search.py  util.py  utils.py
clustering/: clustering.ipynb
dataset/: benchmark_zinc_db.py  generate_genmol_fingerprint_similarity_dataset.py  molecular_fingerprinter.py  process_all_smiles_datasets.py  requirements.txt  seed_benchmarking_db.py
docker/: DB.Dockerfile  init.sql
scripts/: benchmark_zinc_db.py  evaluate_chem_mrl.py  hyperparameter_search_chem_mrl.py  train_chem_mrl.py  train_classifier.py
tests/: test_trainer.py
visualization/: train_isomer_design_classification_functional_embeddings_truncated.tsv  train_isomer_design_embeddings-truncated.tsv  train_isomer_design_full-ds_classification_embeddings_super-truncated.tsv  train_isomer_design_full-ds_classification_embeddings_truncated.tsv  train_isomer_design_full-ds_embeddings-truncated.tsv  train_isomer_design_functional_embeddings-truncated.tsv
(+18 files in other folders)
