[project]
name = "chem-mrl"
version = "0.3.0"
description = "SMILES-based Matryoshka Representation Learning Embeddings"
license = { text = "Apache 2.0" }
readme = "README.md"
authors = [
    { name = "Emmanuel Cortes", email = "ecortes@berkeley.com" },
]
maintainers = [
    { name = "Emmanuel Cortes", email = "ecortes@berkeley.com" },
]
requires-python = ">=3.11"

dependencies = [
    # ML dependencies
    "sentence-transformers==2.7.0",
    "transformers==4.48.1", 
    "optuna==4.2.0",
    "wandb==0.19.4",
    "torch==2.5.1",
    "ninja==1.11.1.3",
    "scikit-learn==1.6.1",
    "pandas==2.2.2",
    "numpy==2.2.2",
]

[project.urls]
Repository = "https://github.com/emapco/chem-mrl-public"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ipykernel"]
benchmark = ["sqlalchemy==2.0.37", "psycopg2-binary==2.9.9", "pgvector==0.3.6"]
data = ["fastparquet==2024.11.0", "rdkit==2024.9.4", "opencv-python==4.11.0.86", "beautifulsoup4==4.12.3", "fickling==0.1.3"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chem_mrl"]
